--- a/client/css/dropdown.css
+++ b/client/css/dropdown.css
@@ -23,7 +23,7 @@
   outline: none;
   color: white;
   padding: 14px 16px;
-  background-color: inherit;
+  background-color:  #333;
   font-family: inherit;
   margin: 0;
 }
