--- a/client/css/jokes.css
+++ b/client/css/jokes.css
@@ -6,20 +6,38 @@
   margin: 0 0 40px 40px;
 }
 
+.thread{
+  border-radius: 25px;
+  background-color: #2d2d2d;
+  padding-left: 50px;
+  margin: 0px 0px 0px 0px;
+  border-left-style: solid;
+  display: flex;
+  flex-direction: row;
+  flex: 0 0 200em;
+}
+
 .joke {
-	border: 1px solid #ececec;
+	border-radius: 25px;
 	background-color: #2d2d2d;
 	padding: 0px 0px;
 	margin: 0px 0px 0px 0px;
   border-left-style: solid;
   display: flex;
   flex-direction: row;
+  flex: 0 0 200em;
 }
 
 .votecol {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+}
+
+.threadbar {
+  display: flex;
+  flex-direction: row;
+  margin-left: 35px;
 }
 
 .sub-title {
