--- a/client/css/dropdown.css
+++ b/client/css/dropdown.css
@@ -1,6 +1,6 @@
 .navbar {
   overflow: visible;
-  background-color: #333;
+  background-color: #26283e;
 }
 
 .navbar a {
@@ -8,7 +8,7 @@
   font-size: 16px;
   color: white;
   text-align: center;
-  padding: 14px 16px;
+  padding: 17px 16px;
   text-decoration: none;
 }
 
@@ -22,8 +22,19 @@
   border: none;
   outline: none;
   color: white;
+  padding: 17px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.dropdown1 .dropbtn1 {
+  font-size: 16px;
+  border-radius: 10px 10px 10px 10px;
+  outline: none;
+  color: #FFFAFA;
   padding: 14px 16px;
-  background-color:  #333;
+  background-color:  #7B68EE;
   font-family: inherit;
   margin: 0;
 }
@@ -51,6 +62,28 @@
 }
 
 .dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown-content1 {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content1 a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content1 a:hover {
   background-color: #ddd;
 }
 
