--- a/client/css/layout.css
+++ b/client/css/layout.css
@@ -8,7 +8,8 @@ body {
   height: 100%;
   font-family: 'Montserrat', sans-serif;
   line-height: 1;
-  background-image: url("pattern.png"); 
+  /*background-image: url("pattern.png");*/
+  background-color: #2c2f58;
 }
 
 * {
@@ -18,7 +19,7 @@ body {
 }
 
 .block {
-  
+
   /*float: left;*/
     display: inline-block;
 }
