--- a/client/css/topnavbar.css
+++ b/client/css/topnavbar.css
@@ -55,3 +55,16 @@
     text-align: left;
   }
 }
+
+.icon-book {
+  width: 50px;
+  postion: fixed;
+  left: 0;
+  top: 0;
+  padding-left: 0px;
+  padding-right: 7px;
+    -webkit-transition: all 0.5s;
+       -moz-transition: all 0.5s;
+         -o-transition: all 0.5s;
+            transition: all 0.5s;
+}
